--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -1,4 +1,9 @@
 .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
@@ -10,6 +15,6 @@
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
-  width: 80px;
+  width: 110px;
   height: 80px;
 }
