Do exercise 02, verified by the solutions

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,4 +1,7 @@
 .header  {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
 }
@@ -9,17 +12,27 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 20px auto;
+ 
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+
+
 }
 
-a {
+a { 
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
+
 }
