--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,10 +9,23 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
+
+.header-right,
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+}
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +58,8 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  gap: 16px;
 }
